[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sekha-memory"
version = "0.5.0"
description = "Python SDK for Sekha AI Memory System"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<4.0"
authors = [
    { name = "Sekha AI", email = "jeff@sekha-ai.dev" },
]
keywords = ["memory", "ai", "llm", "context", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27.0,<0.29",
    "pydantic>=2.0.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
    "aiofiles>=23.0.0,<26.0",
    "backoff>=2.2.0,<3.0",
    "typing-extensions>=4.0.0; python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0",
    "pytest-asyncio>=0.21.0,<1.3",
    "pytest-cov>=4.0.0,<5.0",
    "black>=23.0.0,<26.0",
    "isort>=5.12.0,<7.0",
    "mypy>=1.5.0,<2.0",
]
docs = [
    "mkdocs>=1.5.0,<2.0",
    "mkdocs-material>=9.0.0,<10.0",
]

[project.urls]
Homepage = "https://sakha-ai.dev/"
Documentation = "https://docs.sekha-ai.dev"
Repository = "https://github.com/sekha-ai/sekha-python-sdk"
Issues = "https://github.com/sekha-ai/sekha-python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["sekha"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --cov=sekha --cov-report=term-missing"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
